# LLM-Workshop

./: .env.example  .gitignore  README.md  check.py  pyproject.toml  python-reference.md  requirements.txt  setup-guide.md  slides.md
assets/diagrams/: article-flow.puml  instruction-tuning.puml  next-token-prediction.puml
data/: bad_quality_article.md
practice/genai_ver/: a1.py  a2.py  a3.py  a4.py  b1.py  b2.py  b3.py  c1.py  c2.py  c3.py  d1.py  d2.py  d3.py  d4.py  e1.py  f1.py  f2.py  f3.py
practice/langchain_ver/: a1.py  a2.py  a3.py  a4.py  b1.py  b2.py  b3.py  c1.py  c2.py  c3.py  d1.py  e1.py  e3.py
src/genai_ver/: a1.py  a2.py  a3.py  a4.py  agent.py  b1.py  b2.py  b3.py  c1.py  c2.py  c3.py  d1.py  d2.py  d3.py  d4.py  e1.py  f1.py  f2.py  f3.py
src/langchain_ver/: a1.py  a2.py  a3.py  a4.py  b1.py  b2.py  b3.py  c1.py  c2.py  c3.py  d1.py  e1.py  e3.py
tests/genai_ver/: test_f1.py  test_f1_integration.py  test_f2.py  test_f2_integration.py  test_f3.py  test_f3_integration.py
